<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>edu.harvard.hms.dbmi.avillach.picsure.adapter.hpds</groupId>
	<artifactId>picsure-adapter-hpds</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>pic-sure-java-adapter-hpds</name>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.1.1</version>
				<configuration>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<archive>
						<manifest>
							<mainClass>edu.harvard.hms.dbmi.avillach.picsure.adapter.hpds.example.HpdsExample</mainClass>
						</manifest>
					</archive>
				</configuration>

<!--				<executions>-->
<!--					<execution>-->
<!--						<id>create-example-jar</id>-->
<!--						<phase>package</phase>-->
<!--						<configuration>-->
<!--							<descriptorRefs>-->
<!--								<descriptorRef>jar-with-dependencies</descriptorRef>-->
<!--							</descriptorRefs>-->
<!--							<archive>-->
<!--								<manifest>-->
<!--									<mainClass>edu.harvard.hms.dbmi.avillach.picsure.adapter.hpds.example.HpdsExample</mainClass>-->
<!--								</manifest>-->
<!--							</archive>-->
<!--						</configuration>-->
<!--					</execution>-->
<!--					<execution>-->
<!--						<id>create-client-jar</id>-->
<!--						<phase>package</phase>-->
<!--						<configuration>-->
<!--							<descriptorRefs>-->
<!--								<descriptorRef>jar-with-dependencies</descriptorRef>-->
<!--							</descriptorRefs>-->
<!--							<archive>-->
<!--								<manifest>-->
<!--									<mainClass>edu.harvard.hms.dbmi.avillach.picsure.adapter.hpds.example.HpdsExample</mainClass>-->
<!--								</manifest>-->
<!--							</archive>-->
<!--						</configuration>-->
<!--					</execution>-->
<!--				</executions>-->

			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
					<configuration>
						<release>11</release>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>3.2.0</version>
					<configuration>
						<failOnMissingWebXml>false</failOnMissingWebXml>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.0</version>
					<configuration>
						<argLine>
							--illegal-access=permit
						</argLine>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencies>
		<!-- https://mvnrepository.com/artifact/junit/junit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>2.23.4</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.5</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.13.4.1</version>
		</dependency>

		<dependency>
			<groupId>edu.harvard.hms.dbmi.avillach.picsure.client</groupId>
			<artifactId>picsure-client</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>edu.harvard.hms.dbmi.avillach</groupId>
			<artifactId>pic-sure-api-data</artifactId>
			<version>2.0.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>edu.harvard.hms.dbmi.avillach.hpds</groupId>
			<artifactId>client-api</artifactId>
			<version>1.0-SNAPSHOT</version>
		</dependency>

	</dependencies>
</project>